Fix state for Weimar
Fixes #1

--- a/de.yaml
+++ b/de.yaml
@@ -1962,7 +1962,7 @@ WDA:
   state: "Sachsen"
 WE:
   title: "Weimar"
-  state: "Bayern"
+  state: "Thüringen"
 WEL:
   title: "Weilburg"
   state: "Hessen"
