--- a/de.yaml
+++ b/de.yaml
@@ -1423,6 +1423,9 @@ OPR:
 OS:
   title: "Osnabrück"
   state: "Niedersachsen"
+OTW:
+  title: "Neunkirchen/Saar"
+  state: "Saarland"  
 OSL:
   title: "Oberspreewald-Lausitz"
   state: "Brandenburg"
