--- a/de.yaml
+++ b/de.yaml
@@ -172,6 +172,9 @@ BIW:
 BK:
   title: "Bördekreis"
   state: "Sachsen-Anhalt"
+BK:
+  title: "Backnang"
+  state: "Baden-Württemberg"
 BKS:
   title: "Bernkastel-Kues (Bernkastel-Wittlich)"
   state: "Rheinland-Pfalz"
